CSS Cleanup - Changed conflicting styles in each section - Aligned content - Adjusted Splash (bg and icon) - Adjusted iframe width - Layout needs grid/media queries for other phone sizes (this will take a little work but made quick fixes for now) - font size continuity - Added google fonts - Added spacing to each section More to come. Also restructing menu so items align correctly

--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,31 @@
+/* Smooth ALL Fonts out
+--------------------*/
+* {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+/* Typography
+--------------------*/
+
+h1, h2, h3, h4, h5, div{
+  font-family: 'Noto Sans', sans-serif;
+}
+
+p, span, a {
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+
 
 .App {
   display: flex;
   flex-direction: column;
-  text-align: center;
+  /* text-align: center; */
   width: 100%;
   height: 100%;
   align-content: center;
   padding: 0;
-  padding-top: 90px;
   background-image: url("./assets/background.png");
   color: white;
 }
