--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -4,22 +4,26 @@
   background-color: rgba(0, 0, 0, 1);
   height: 83px;
   position: fixed;
-  width: 100%;
+
+  width: 100vw;
+  z-index: 400;
 }
+
 img {
   width: 148.5px;
   height: 33px;
   margin-top: 6px;
 }
 
-a {
+.header a {
   width: 67px;
   height: 21px;
   font-size: 18px;
   outline: none;
   text-decoration: none;
   color: white;
-  margin: 14px 21px 0;
+  margin: 0px 18px 0;
+  text-align: center;
 }
 
 a:hover {
