--- a/src/about/About.css
+++ b/src/about/About.css
@@ -1,4 +1,5 @@
 .about {
+  margin-bottom: 40px;
   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
     url("../assets/zurutto_abot.jpg");
   height: 667px;
@@ -7,7 +8,7 @@
   background-repeat: no-repeat;
 }
 .about-content {
-  font-size: 18px;
+  font-size: 1.0em;
   line-height: 1.5;
   margin: 154px 113px 141px 27px;
   text-align: left;
