--- a/src/menu/menu.css
+++ b/src/menu/menu.css
@@ -1,5 +1,10 @@
+#menu{
+  margin-bottom:40px;
+}
+
 .menu-section-container {
-    width: 100vh;
+    /* width: 100vh; This should be "vw for width of viewport*/
+    width: 100%;
     /* height: 100vh; */
     display: flex;
     flex-flow: column;
@@ -8,16 +13,17 @@
     align-items: flex-start;
     margin-bottom: 2%;
 }
-
+.content{
+  flex: 4;
+  margin: 0;
+}
 .menu-head {
+    text-align: left;
     /* width: 226;
     height: 894; */
-    display: flex;
-    justify-content: baseline;
     font-family: "SFProText";
-    font-size: 15;
+    font-size: 1.5rem;
     font-weight: 600;
-    font-style: normal;
     letter-spacing: 0;
     color: white;
     padding: 2% 10% 2% 2%;
@@ -25,26 +31,40 @@
 
 .menu-item {
     display: flex;
-    justify-content: space-between;
-    justify-items: self-end;
-    align-self: flex-start;
+    text-align: left;
     font-family: "SFProText";
-    font-size: 15;
+    /* font-size: 15;
     font-weight: 300;
-    font-style: normal;
+    font-style: normal; */
     letter-spacing: 0;
     color: white;
     margin: 2%;
 }
 
+/* Menu Categories (Dropdowns)
+----------------------------------*/
+.menu-cat{
+  padding-left: 20px;
+  font-weight: 600;
+  text-shadow: 2px 3px 2px #00000087;
+}
+/* .menu-cat span{
+  font-weight: 600;
+  text-shadow: 2px 3px 2px #00000087;
+} Adding Spans disabled the onclick event*/
+
 .item-description {
     text-align: left;
+    display: flex;
     flex-flow: wrap;
 }
 
 .price {
-    justify-content: right;
+    font-family: "SFProText";
+    font-size: 1.5rem;
     text-align: right;
+    /* flex: 2; */
+    font-weight: 600;
 }
 
 .main-banner {
@@ -54,7 +74,7 @@
     opacity: .7;
     text-align: left;
     font-size: 2rem;
-    width: 100%;
+    width: 100vw;
     height: 10vh;
 }
 
@@ -65,7 +85,7 @@
     opacity: .7;
     text-align: left;
     font-size: 2rem;
-    width: 100%;
+    width: 100vw;
     height: 10vh;
 }
 
@@ -76,7 +96,7 @@
     background-size: 100% 100%;
     text-align: left;
     font-size: 2rem;
-    width: 100%;
+    width: 100vw;
     height: 10vh;
 }
 
@@ -87,6 +107,6 @@
     opacity: .7;
     text-align: left;
     font-size: 2rem;
-    width: 100%;
+    width: 100vw;
     height: 10vh;
 }
