--- a/src/splash/Splash.css
+++ b/src/splash/Splash.css
@@ -1,14 +1,29 @@
 .splash-img {
-    height: 465px;
+    height: 346px;
     width: 100%;
     margin: 0 auto;
     background-size: cover;
+
 }
 
 .scroll-arrow {
     border-radius: 50%;
-    height: 80px;
-    width: 80px;
+    height: 49px;
+    width: 100%;
+    max-width: 55px;
     background-color: gray;
     margin: 0 auto;
+}
+
+.splash a{
+  height: 49px;
+  width: 49px;
+  display: block;
+  margin:0 auto;
+}
+
+.splash{
+  height: 100vh;
+  background-color: #000000;
+  padding-top: 80px;
 }
